sections/section-010/module-01/playground/examples/01-request-routing/cases/c1-virtualservice-scout-v3.yaml
# Case 1: switch all traffic to v3 by changing only the subset name.
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: scout
  namespace: starfleet
spec:
  hosts:
  - scout
  http:
  - route:
    - destination:
        host: scout
        subset: v3
